--- a/index.html
+++ b/index.html
@@ -78,12 +78,50 @@
         background-color:rgb(25, 165, 220);
         position: absolute;
         right: 0;
-        border-radius: 25px;
+       
         cursor: pointer;
         font-size: 16px;
         font-weight: bolder;
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
-      }
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+
+  background-color: #0095ff;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
+  font-size: 23px;
+  /* font-weight: 400; */
+  line-height: 1.15385;
+  margin: 0;
+  outline: none;
+  padding: 8px .8em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  white-space: nowrap;
+  border-radius: 25px;
+}
+
+
+
+
+
+
+button:active {
+ transform: scale(1.1);
+  box-shadow: none;
+}
+
+
 
       ul li {
         list-style-type: none;
